新增各項搜尋功能及重複項目邏輯判斷